Don't forget about the outer selector when matching ::slotted(). https://bugs.webkit.org/show_bug.cgi?id=229438

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-scoping/slotted-specificity-002-expected.html: Added.
* web-platform-tests/css/css-scoping/slotted-specificity-002.html: Added.
* web-platform-tests/css/css-scoping/w3c-import.log:

Source/WebCore:

Test: imported/w3c/web-platform-tests/css/css-scoping/slotted-specificity-002.html

* css/CSSSelector.cpp:
(WebCore::simpleSelectorSpecificityInternal):
* style/ElementRuleCollector.cpp:
(WebCore::Style::ElementRuleCollector::ruleMatches):


Canonical link: https://commits.webkit.org/241042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281692 268f45cc-cd09-0410-ab3c-d52691b4dbfc